ps2 diary student page footer overflow issue resolved

--- a/PS2/templates/PS2/style.css
+++ b/PS2/templates/PS2/style.css
@@ -119,7 +119,6 @@ footer {
 padding-left:0px;
 	position: fixed;
   bottom: 0px;
-  height:100px;
   width: 100%;
   overflow: auto;
  
@@ -450,7 +449,7 @@ li.current-menu-item:before {
 
 
 
-..w3-image{max-width:100%;height:auto}img{vertical-align:middle}a{color:inherit}
+.w3-image{max-width:100%;height:auto}img{vertical-align:middle}a{color:inherit}
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
 .w3-bordered tr,.w3-table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
 .w3-table-all tr:nth-child(odd){background-color:#fff}.w3-table-all tr:nth-child(even){background-color:#f1f1f1}
